remove hard dep

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,10 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
+
+target_mc_version=1.19.2
+additional_mc_versions=
+
+fml_version_range=[40,)
+forge_version_range=[40.0.18,)
+minecraft_version_range=[1.18.2)
